# DJANGO.site-Telegram-bots

./: .coverage  .env-non-dev  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yaml  logger.py  pyproject.toml  requirements.txt
app/: celery.py  settings.py  urls.py
deploy/: .env  docker-compose.yaml  nginx.conf
fixtures/: contacts.json  data.json  menus.json  products.json
main/: admin.py  exceptions.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
main/application/services/: services.py
main/domain/: aggregates.py  entities.py
main/infrastructure/: interfaces.py  models.py  repositories.py  uow.py
main/migrations/: 0001_initial.py  0002_initial.py
main/static/css/: style.css  style404.css  style_about.css  style_new_order.css  style_order.css  style_prices.css
main/templates/: page404.html
main/templates/includes/: errors.html
main/templates/main/: about.html  accept-done.html  accept.html  base.html  contacts.html  index.html  new-order.html  order-page.html  page404.html  prices.html
main/templatetags/: main_tags.py
shared/infrastructure/: interfaces.py  uow.py
static/css/: style.css  style_about.css  style_accept.css  style_auth.css  style_contacts.css  style_my_orders.css  style_new_order.css  style_order.css  style_prices.css  style_profile.css
users/: admin.py  factories.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
users/application/command/: auth_user.py  delete_user.py
users/domain/: entities.py
users/migrations/: 0001_initial.py
users/templatetags/: users_tags.py
(+24 files in other folders)
